clusters/deleted-grv-usw2/default/app-loader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apploader
  name: apploader
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: apploader
  template:
    metadata:
      labels:
        app: apploader
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: apploader
      serviceAccountName: appsimulator
      containers:
      - env:
        - name: NUM_OF_LOAD_THREADS
          value: "10"
        - name: SLEEP_BETWEEN_CYCLE
          value: "10"
        - name: ARM_APP_URL
          value: "http://simplemultiarchapp-279437019.us-west-2.elb.amazonaws.com/app"
        - name: AMD_APP_URL
          value: "http://simplemultiarchapp-279437019.us-west-2.elb.amazonaws.com/app"
        - name: DEPLOY_NAME
          value: "appsimulator"
        image: 907513986313.dkr.ecr.us-west-2.amazonaws.com/simplemultiarchimage:multiarch-py3
        imagePullPolicy: Always
        name: apploader
        command: ["/usr/src/app/app-loader.sh"]
        #resources:
        #  requests:
        #    cpu: 1000m
        #    memory: 512Mi
        #  limits:
        #    cpu: 1000m
        #    memory: 512Mi
